# RP360XP

./: README.md
protocol/: README.md  protocol_part1.md  protocol_part2.md
serial-mitm/: README.md
serial-mitm/scripts/: gadget-setup.sh  gadget-teardown.sh  mitm_serial.py
src/: README.md  pyproject.toml
src/rp360xp/: __init__.py  cli.py  device.py  effects_db.py  model.py  protocol.py  rp360_effects.json  transport.py
src/rp360xp/ui/: main_window.py  widgets.py  worker.py
src/scripts/: diagnose.py  listen.py
src/tests/: test_controllers.py  test_mastervol.py  test_transport.py
